--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=WebAppManagerRoomGymBE
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#jwt properties
+security.jwt.secret-key = $2a$12$WqAVeYqBv9l475Iyzy7XFOp.elig7J9jYnpS8XirdoVLk6nw1BPP6
+security.jwt.expiration = 14400000
