--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,16 @@ server.port=8085
 
 
 
+spring.datasource.url=jdbc:mysql://localhost:3307/Gym_Manager
+spring.datasource.username=root
+spring.datasource.password=12122003
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 
 
