--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=WebAppManagerRoomGymBE
 server.port=8085
 
-spring.datasource.url=jdbc:mysql://localhost:3307/Gym_Manager
-spring.datasource.username=root
-spring.datasource.password=12122003
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/Gym_Manager
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
