--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,23 @@
 spring.application.name=WebAppManagerRoomGymBE
 server.port=8085
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/gym_manager
+spring.datasource.url=jdbc:postgresql://localhost:5432/Gym_Manager
 spring.datasource.username=postgres
 spring.datasource.password=12122003
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#spring email
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username= namle12122003@gmail.com
+spring.mail.password=zucf dirj aqcv yerh
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
