update search uu dai and refresh token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,4 @@ spring.jpa.show-sql=true
 #jwt properties
 security.jwt.secret-key = $2a$12$WqAVeYqBv9l475Iyzy7XFOp.elig7J9jYnpS8XirdoVLk6nw1BPP6
 security.jwt.expiration = 14400000
+security.jwt.refresh-expiration=18800000
