update search payment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8085
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/gym_manager
 spring.datasource.username=postgres
-spring.datasource.password=12122003
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
