--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=WebAppManagerRoomGymBE
 server.port=8085
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/gym_manager
+spring.datasource.url=jdbc:postgresql://localhost:5432/Gym_Manager
 spring.datasource.username=postgres
 spring.datasource.password=12122003
 spring.datasource.driver-class-name=org.postgresql.Driver
