--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username= namle12122003@gmail.com
-spring.mail.password=zucf dirj aqcv yerh
+spring.mail.password=stll ditx cvly ftju
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 apiKey=apiKey
