--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,14 +8,15 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #spring email
-
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username= namle12122003@gmail.com
-spring.mail.password=stll ditx cvly ftju
+spring.mail.username=huuhann.webvps@gmail.com
+spring.mail.password=yopy rcqk upax jllb
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 apiKey=apiKey
+
+
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
