--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=WebAppManagerRoomGymBE
 server.port=8085
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/Gym_Manager
+# Kết nối tới Amazon RDS PostgreSQL
+spring.datasource.url=jdbc:postgresql://database-1.ctacsgygc2s8.ap-southeast-2.rds.amazonaws.com:5432/mydb
 spring.datasource.username=postgres
-spring.datasource.password=12122003
+spring.datasource.password=28012004
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 
 #spring email
 spring.mail.host=smtp.gmail.com
